[gd_scene load_steps=61 format=2]

[ext_resource path="res://assets/sprites/player/dog/idle/Idle (2).png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/player/dog/idle/Idle (3).png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/player/dog/idle/Idle (1).png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/player/dog/idle/Idle (6).png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/player/dog/idle/Idle (8).png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/player/dog/idle/Idle (4).png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/player/dog/idle/Idle (7).png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/player/dog/idle/Idle (9).png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/player/dog/idle/Idle (10).png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/player/dog/idle/Idle (5).png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/player/dog/run/Run (5).png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/player/dog/run/Run (6).png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/player/dog/run/Run (1).png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/player/dog/run/Run (4).png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/player/dog/run/Run (2).png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/player/dog/run/Run (3).png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/player/dog/run/Run (7).png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/player/dog/run/Run (8).png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/player/dog/jump/Jump (4).png" type="Texture" id=19]
[ext_resource path="res://assets/sprites/player/dog/jump/Jump (2).png" type="Texture" id=20]
[ext_resource path="res://assets/sprites/player/dog/jump/Jump (8).png" type="Texture" id=21]
[ext_resource path="res://assets/sprites/player/dog/jump/Jump (5).png" type="Texture" id=22]
[ext_resource path="res://assets/sprites/player/dog/jump/Jump (6).png" type="Texture" id=23]
[ext_resource path="res://assets/sprites/player/dog/jump/Jump (1).png" type="Texture" id=24]
[ext_resource path="res://assets/sprites/player/dog/jump/Jump (3).png" type="Texture" id=25]
[ext_resource path="res://assets/sprites/player/dog/jump/Jump (7).png" type="Texture" id=26]
[ext_resource path="res://assets/sprites/player/dog/dead/Dead (10).png" type="Texture" id=27]
[ext_resource path="res://assets/sprites/player/dog/dead/Dead (7).png" type="Texture" id=28]
[ext_resource path="res://assets/sprites/player/dog/dead/Dead (8).png" type="Texture" id=29]
[ext_resource path="res://assets/sprites/player/dog/dead/Dead (9).png" type="Texture" id=30]
[ext_resource path="res://assets/sprites/player/dog/dead/Dead (1).png" type="Texture" id=31]
[ext_resource path="res://assets/sprites/player/dog/dead/Dead (5).png" type="Texture" id=32]
[ext_resource path="res://assets/sprites/player/dog/dead/Dead (3).png" type="Texture" id=33]
[ext_resource path="res://assets/sprites/player/dog/dead/Dead (4).png" type="Texture" id=34]
[ext_resource path="res://assets/sprites/player/dog/dead/Dead (2).png" type="Texture" id=35]
[ext_resource path="res://assets/sprites/player/dog/dead/Dead (6).png" type="Texture" id=36]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=37]
[ext_resource path="res://assets/sprites/player/dog/fall/Fall (6).png" type="Texture" id=38]
[ext_resource path="res://assets/sprites/player/dog/fall/Fall (4).png" type="Texture" id=39]
[ext_resource path="res://assets/sprites/player/dog/fall/Fall (1).png" type="Texture" id=40]
[ext_resource path="res://assets/sprites/player/dog/fall/Fall (2).png" type="Texture" id=41]
[ext_resource path="res://assets/sprites/player/dog/fall/Fall (3).png" type="Texture" id=42]
[ext_resource path="res://assets/sprites/player/dog/fall/Fall (5).png" type="Texture" id=43]
[ext_resource path="res://assets/sprites/player/dog/fall/Fall (7).png" type="Texture" id=44]
[ext_resource path="res://assets/sprites/player/dog/fall/Fall (8).png" type="Texture" id=45]
[ext_resource path="res://src/UIs/Controller.tscn" type="PackedScene" id=46]
[ext_resource path="res://assets/audios/horror_bg_music.wav" type="AudioStream" id=47]
[ext_resource path="res://assets/audios/kill.wav" type="AudioStream" id=48]
[ext_resource path="res://assets/audios/die.wav" type="AudioStream" id=49]
[ext_resource path="res://assets/audios/ground_hit.wav" type="AudioStream" id=50]
[ext_resource path="res://src/Sfx/Dust.tscn" type="PackedScene" id=51]
[ext_resource path="res://assets/audios/respawn.wav" type="AudioStream" id=52]
[ext_resource path="res://src/Sfx/Lighting.tscn" type="PackedScene" id=53]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 20 ), ExtResource( 25 ), ExtResource( 19 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 26 ), ExtResource( 21 ) ],
"loop": false,
"name": "jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 35 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 32 ), ExtResource( 36 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 27 ) ],
"loop": false,
"name": "dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 39 ), ExtResource( 43 ), ExtResource( 38 ), ExtResource( 44 ), ExtResource( 45 ) ],
"loop": false,
"name": "fall",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 54.7751
height = 235.953

[sub_resource type="Animation" id=3]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "live"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 61.2884
height = 231.717

[sub_resource type="CapsuleShape2D" id=6]
radius = 112.373
height = 217.892

[sub_resource type="AudioStreamSample" id=7]
data = PoolByteArray( 246, 240, 238, 236, 241, 246, 250, 0, 2, 12, 16, 12, 8, 4, 6, 8, 0, 252, 248, 248, 246, 242, 242, 244, 248, 0, 2, 4, 6, 6, 4, 0, 252, 0, 0, 0, 248, 240, 240, 244, 246, 248, 250, 0, 6, 12, 8, 6, 4, 6, 4, 0, 3, 8, 10, 2, 250, 248, 250, 250, 248, 242, 242, 248, 252, 250, 248, 250, 2, 8, 10, 11, 12, 10, 6, 252, 248, 248, 248, 252, 248, 248, 254, 0, 254, 248, 249, 254, 2, 2, 252, 250, 248, 244, 242, 240, 242, 252, 2, 6, 10, 11, 14, 14, 8, 8, 6, 8, 4, 250, 246, 246, 248, 248, 248, 250, 0, 8, 12, 10, 8, 7, 4, 0, 250, 252, 0, 254, 248, 242, 242, 246, 250, 252, 254, 2, 10, 16, 6, 252, 250, 252, 254, 252, 254, 2, 8, 8, 254, 252, 254, 4, 2, 254, 252, 254, 4, 0, 252, 248, 248, 254, 255, 0, 4, 6, 4, 254, 248, 250, 254, 2, 6, 6, 6, 10, 2, 252, 246, 246, 254, 4, 2, 248, 248, 246, 244, 244, 244, 250, 2, 8, 8, 8, 10, 10, 10, 4, 4, 3, 0, 252, 246, 244, 248, 248, 248, 246, 250, 4, 12, 12, 6, 2, 0, 252, 246, 246, 248, 0, 0, 248, 248, 250, 0, 8, 6, 4, 6, 10, 4, 250, 244, 246, 252, 254, 254, 254, 0, 254, 250, 242, 242, 248, 0, 0, 252, 252, 0, 2, 252, 250, 252, 0, 8, 10, 6, 2, 254, 250, 246, 244, 248, 252, 254, 0, 2, 2, 4, 2, 254, 252, 0, 4, 6, 254, 246, 242, 243, 240, 240, 244, 254, 6, 10, 8, 10, 12, 10, 8, 3, 4, 8, 2, 254, 248, 248, 252, 252, 252, 253, 0, 10, 12, 6, 2, 255, 254, 250, 246, 248, 252, 252, 248, 242, 244, 250, 0, 6, 6, 8, 12, 8, 254, 246, 244, 250, 252, 252, 250, 251, 254, 252, 246, 244, 248, 252, 3, 5, 10, 16, 19, 16, 6, 0, 2, 6, 8, 4, 252, 252, 246, 240, 240, 240, 246, 252, 4, 12, 15, 22, 19, 8, 255, 254, 2, 0, 248, 236, 232, 234, 234, 234, 238, 246, 0, 10, 14, 14, 16, 18, 16, 12, 10, 10, 12, 2, 250, 240, 242, 248, 244, 246, 247, 252, 0, 0, 254, 254, 0, 4, 4, 0, 252, 254, 250, 248, 244, 247, 253, 254, 252, 250, 250, 0, 0, 252, 254, 4, 12, 10, 10, 10, 3, 254, 250, 239, 240, 246, 246, 246, 246, 246, 250, 247, 0, 8, 14, 24, 26, 16, 8, 254, 254, 246, 238, 238, 243, 248, 250, 248, 250, 252, 254, 2, 2, 2, 6, 8, 4, 248, 242, 242, 242, 244, 246, 250, 254, 6, 2, 0, 0, 10, 19, 16, 16, 12, 12, 6, 250, 242, 238, 238, 242, 244, 246, 252, 2, 6, 0, 250, 252, 254, 4, 7, 8, 4, 3, 2, 250, 250, 254, 252, 248, 246, 248, 248, 0, 10, 6, 8, 12, 14, 12, 2, 2, 0, 252, 240, 233, 236, 242, 250, 0, 4, 6, 10, 6, 8, 10, 12, 18, 12, 10, 0, 0, 242, 234, 234, 234, 244, 2, 24, 20, 10, 8, 6, 2, 0, 250, 250, 244, 240, 232, 232, 238, 243, 250, 2, 10, 16, 22, 14, 8, 2, 6, 6, 4, 2, 248, 238, 230, 236, 238, 254, 14, 13, 16, 14, 18, 12, 8, 250, 244, 244, 242, 242, 244, 248, 252, 254, 244, 248, 250, 8, 12, 8, 1, 2, 12, 14, 6, 240, 240, 242, 254, 11, 254, 248, 252, 248, 246, 244, 250, 0, 4, 8, 2, 2, 2, 253, 0, 4, 8, 252, 0, 248, 255, 240, 236, 228, 252, 16, 12, 250, 224, 14, 252, 6, 4, 9, 250, 244, 252, 0, 251, 234, 216, 242, 6, 18, 8, 0, 8, 28, 44, 4, 240, 236, 30, 34, 14, 204, 222, 10, 236, 0, 250, 252, 250, 0, 8, 4, 248, 252, 2, 10, 2, 2, 2, 10, 18, 244, 242, 220, 25, 10, 12, 210, 244, 17, 0, 9, 254, 246, 248, 254, 254, 246, 240, 246, 252, 248, 254, 248, 7, 8, 12, 2, 2, 39, 12, 8, 220, 8, 8, 12, 16, 6, 254, 252, 252, 248, 238, 248, 250, 2, 252, 247, 248, 246, 10, 2, 6, 34, 14, 4, 201, 250, 250, 1, 2, 0, 252, 0, 255, 250, 254, 1, 10, 10, 250, 2, 247, 254, 242, 244, 6, 250, 4, 226, 15, 16, 20, 12, 12, 6, 2, 254, 254, 0, 8, 248, 230, 246, 255, 250, 6, 3, 30, 250, 2, 216, 242, 0, 0, 4, 2, 253, 248, 246, 2, 254, 242, 246, 250, 8, 252, 14, 4, 6, 254, 244, 238, 254, 46, 252, 0, 254, 10, 239, 245, 248, 0, 8, 238, 244, 241, 10, 4, 249, 18, 10, 240, 224, 4, 244, 252, 252, 12, 246, 252, 6, 16, 252, 218, 20, 16, 18, 234, 30, 6, 252, 172, 240, 0, 42, 242, 230, 30, 52, 217, 226, 246, 64, 26, 218, 226, 78, 32, 180, 216, 54, 2, 248, 254, 254, 24, 254, 188, 218, 76, 238, 176, 2, 72, 228, 194, 54, 242, 14, 4, 246, 14, 32, 202, 226, 82, 234, 182, 30, 50, 220, 218, 50, 228, 42, 245, 230, 40, 246, 186, 50, 40, 178, 248, 76, 234, 204, 34, 236, 38, 8, 220, 42, 6, 178, 46, 32, 174, 243, 70, 230, 204, 24, 232, 38, 0, 217, 62, 230, 196, 74, 254, 180, 38, 58, 198, 241, 20, 245, 64, 208, 18, 52, 176, 26, 50, 176, 238, 72, 209, 207, 34, 230, 66, 234, 238, 72, 190, 0, 66, 193, 228, 76, 216, 214, 31, 218, 70, 226, 238, 70, 186, 10, 46, 182, 2, 57, 198, 250, 10, 242, 60, 188, 28, 28, 183, 38, 14, 182, 48, 16, 190, 26, 236, 46, 2, 210, 75, 202, 223, 64, 196, 228, 70, 210, 224, 20, 14, 38, 191, 74, 222, 207, 58, 215, 202, 68, 212, 204, 28, 2, 28, 216, 76, 214, 220, 62, 224, 204, 72, 230, 199, 36, 253, 14, 234, 74, 187, 4, 58, 190, 254, 60, 186, 230, 30, 254, 254, 38, 7, 210, 70, 224, 204, 66, 236, 196, 40, 242, 254, 38, 6, 208, 66, 230, 209, 60, 246, 193, 24, 254, 230, 50, 252, 220, 59, 243, 214, 62, 4, 198, 20, 234, 250, 72, 208, 248, 36, 224, 220, 52, 249, 200, 2, 248, 56, 6, 216, 52, 238, 202, 24, 36, 182, 211, 30, 4, 14, 15, 23, 220, 246, 32, 254, 204, 246, 20, 2, 14, 10, 6, 2, 236, 238, 254, 252, 1, 2, 4, 2, 0, 254, 0, 2, 8, 8, 7, 7, 6, 6, 4, 2, 6, 4, 4, 4, 4, 4, 4, 0, 254, 0, 254, 252, 246, 243, 241, 242, 246, 248, 252, 0, 2, 8, 2, 252, 249, 248, 246, 246, 244, 247, 246, 247, 245, 244, 252, 0, 0, 4, 3, 0, 252, 246, 246, 248, 248, 250, 250, 246, 246, 248, 252, 254, 0, 6, 10, 13, 12, 8, 8, 8, 8, 8, 6, 7, 7, 3, 2, 0, 253, 254, 254, 252, 0, 0, 2, 0, 0, 0, 3, 8, 8, 2, 254, 252, 246, 242, 240, 244, 248, 250, 252, 252, 252, 252, 249, 248, 246, 247, 250, 246, 240, 236, 238, 241, 246, 248, 252, 6, 8, 8, 2, 0, 0, 3, 3, 2, 4, 6, 6, 4, 6, 4, 12, 16, 16, 16, 14, 12, 8, 2, 0, 2, 4, 6, 6, 8, 10, 4, 6, 4, 0, 2, 2, 2, 0, 252, 253, 254, 250, 250, 246, 248, 248, 242, 236, 232, 234, 234, 236, 239, 244, 248, 248, 248, 246, 248, 253, 254, 250, 246, 250, 252, 252, 0, 0, 6, 8, 10, 12, 12, 12, 16, 19, 16, 14, 10, 8, 10, 7, 8, 6, 12, 14, 15, 18, 16, 21, 16, 8, 4, 4, 0, 254, 248, 246, 244, 241, 240, 234, 236, 240, 236, 236, 234, 230, 232, 235, 234, 237, 230, 238, 241, 237, 246, 244, 248, 252, 246, 254, 6, 0, 6, 6, 2, 8, 4, 11, 26, 20, 24, 22, 16, 20, 250, 6, 32, 22, 18, 28, 22, 24, 0, 18, 24, 254, 254, 0, 240, 242, 236, 244, 242, 218, 0, 232, 243, 216, 208, 250, 227, 226, 2, 202, 244, 196, 8, 216, 196, 2, 12, 242, 36, 234, 42, 238, 32, 32, 212, 42, 48, 10, 74, 238, 82, 0, 42, 36, 226, 48, 30, 8, 52, 218, 50, 226, 18, 238, 222, 10, 4, 222, 24, 169, 42, 164, 30, 164, 252, 210, 2, 184, 14, 175, 46, 181, 48, 190, 36, 216, 10, 234, 16, 2, 30, 12, 18, 14, 32, 40, 254, 54, 236, 74, 230, 64, 210, 58, 252, 20, 14, 252, 34, 238, 34, 200, 30, 222, 6, 228, 234, 246, 218, 245, 188, 12, 210, 6, 212, 245, 232, 246, 240, 234, 18, 246, 20, 245, 16, 0, 32, 12, 2, 38, 20, 44, 18, 46, 18, 37, 16, 4, 24, 6, 22, 246, 12, 246, 252, 233, 216, 10, 218, 2, 208, 236, 219, 218, 208, 205, 6, 202, 248, 222, 242, 244, 242, 248, 236, 54, 246, 38, 8, 30, 42, 30, 30, 24, 60, 24, 38, 28, 22, 28, 2, 246, 21, 246, 6, 240, 246, 240, 218, 210, 207, 250, 192, 222, 206, 216, 226, 208, 212, 4, 236, 250, 252, 2, 14, 24, 4, 10, 62, 12, 52, 36, 36, 46, 30, 14, 46, 12, 20, 16, 12, 12, 0, 210, 10, 210, 237, 200, 232, 190, 214, 194, 241, 202, 232, 218, 248, 251, 222, 254, 10, 248, 12, 20, 38, 64, 30, 40, 64, 44, 44, 34, 32, 46, 4, 14, 26, 247, 248, 234, 240, 223, 190, 214, 208, 200, 206, 206, 218, 208, 202, 246, 248, 252, 4, 14, 28, 18, 34, 60, 48, 52, 54, 58, 38, 26, 46, 30, 22, 14, 14, 240, 224, 238, 206, 206, 202, 206, 199, 200, 212, 216, 211, 228, 236, 234, 236, 10, 38, 28, 40, 54, 54, 48, 58, 62, 40, 42, 30, 16, 252, 24, 248, 248, 240, 226, 200, 210, 206, 198, 206, 206, 206, 197, 232, 219, 232, 246, 14, 16, 32, 64, 44, 58, 60, 52, 32, 60, 28, 40, 34, 254, 232, 14, 200, 218, 204, 196, 196, 224, 192, 212, 226, 198, 218, 8, 222, 32, 28, 12, 36, 54, 40, 66, 44, 24, 72, 30, 42, 8, 248, 251, 226, 212, 210, 199, 197, 207, 200, 222, 202, 197, 230, 10, 252, 28, 253, 58, 46, 58, 44, 44, 82, 32, 50, 240, 56, 219, 6, 188, 252, 192, 216, 192, 222, 204, 206, 200, 241, 2, 246, 4, 18, 44, 34, 38, 50, 56, 48, 35, 52, 16, 0, 250, 252, 212, 218, 216, 216, 188, 191, 233, 216, 218, 246, 32, 254, 36, 40, 58, 24, 50, 66, 28, 30, 40, 10, 226, 237, 240, 194, 206, 232, 194, 198, 230, 250, 204, 16, 32, 2, 34, 52, 38, 24, 64, 48, 252, 54, 20, 218, 252, 244, 192, 216, 2, 174, 196, 24, 230, 196, 26, 34, 246, 16, 62, 36, 15, 58, 44, 12, 0, 2, 234, 228, 219, 216, 216, 190, 200, 226, 241, 248, 8, 30, 36, 48, 56, 58, 52, 44, 27, 9, 240, 232, 219, 206, 198, 194, 200, 216, 226, 240, 4, 14, 35, 40, 50, 56, 56, 50, 34, 8, 242, 230, 218, 202, 192, 194, 194, 212, 230, 246, 6, 26, 38, 48, 60, 58, 48, 36, 14, 248, 234, 222, 204, 197, 196, 202, 214, 233, 248, 8, 26, 40, 54, 56, 58, 48, 30, 4, 242, 231, 216, 196, 198, 198, 208, 228, 248, 6, 24, 44, 54, 58, 60, 44, 18, 248, 238, 224, 204, 192, 194, 207, 216, 232, 0, 20, 38, 50, 56, 67, 50, 28, 6, 241, 230, 205, 198, 206, 194, 204, 4, 247, 10, 56, 48, 48, 82, 28, 12, 254, 230, 208, 212, 192, 184, 228, 243, 252, 38, 48, 46, 78, 46, 21, 14, 236, 228, 218, 180, 192, 222, 208, 252, 24, 26, 68, 66, 48, 52, 250, 0, 230, 196, 210, 203, 198, 244, 252, 14, 52, 50, 66, 59, 10, 4, 232, 210, 212, 188, 200, 233, 234, 22, 42, 40, 82, 38, 34, 2, 244, 218, 184, 188, 214, 220, 0, 30, 42, 80, 52, 30, 8, 248, 227, 196, 182, 204, 212, 244, 20, 30, 74, 68, 44, 20, 250, 232, 188, 182, 208, 218, 250, 34, 42, 71, 54, 17, 4, 224, 206, 206, 190, 236, 7, 20, 14, 26, 22, 22, 14, 10, 2, 254, 250, 248, 248, 246, 242, 238, 236, 238, 0 )
mix_rate = 11025

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.25, 0.25 )
collision_mask = 446
script = ExtResource( 37 )
speed = Vector2( 500, 1300 )
impluse = 600.0
dust_sfx = ExtResource( 51 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 9
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 43 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -500 )
current = true
limit_bottom = 1300
limit_smoothed = true
smoothing_enabled = true
offset_h = 0.2
offset_v = 0.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "live"
anims/death = SubResource( 3 )
anims/live = SubResource( 4 )

[node name="EnemyDetector" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2( -1.18921, 35.7835 )
shape = SubResource( 5 )

[node name="DeathZoneDetector" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 576

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZoneDetector"]
shape = SubResource( 6 )

[node name="Controller" parent="." instance=ExtResource( 46 )]

[node name="Lighting" parent="." instance=ExtResource( 53 )]
visible = false

[node name="Sfx" type="Node2D" parent="."]

[node name="Spawn" type="AudioStreamPlayer2D" parent="Sfx"]
stream = ExtResource( 52 )
volume_db = 5.0

[node name="Loop" type="AudioStreamPlayer2D" parent="Sfx"]
stream = ExtResource( 47 )
volume_db = -10.0
autoplay = true

[node name="Die" type="AudioStreamPlayer2D" parent="Sfx"]
stream = ExtResource( 49 )

[node name="Jump" type="AudioStreamPlayer2D" parent="Sfx"]
stream = SubResource( 7 )

[node name="Kill" type="AudioStreamPlayer2D" parent="Sfx"]
stream = ExtResource( 48 )

[node name="Ground_Hit" type="AudioStreamPlayer2D" parent="Sfx"]
stream = ExtResource( 50 )
volume_db = -5.0

[node name="Dust_position" type="Node2D" parent="."]
position = Vector2( -20.1819, 225.36 )
[connection signal="area_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_area_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="area_entered" from="DeathZoneDetector" to="." method="_on_DeathZoneDetector_area_entered"]
